# nodenet

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  README.md  eslint.config.mjs  package-lock.json  package.json  release-policy.json
ai_documentation/: 00-index.md  01-scope-and-requirements.md  02-architecture.md  03-safety-and-security.md  04-roadmap.md  05-decision-log.md  06-tooling-and-testing.md  07-phase-1-report.md  08-phase-2-report.md  09-phase-3-report.md  10-phase-4-report.md  11-full-capability-plan.md  12-phase-5-report.md  13-phase-6-report.md  14-phase-7-report.md  15-phase-8-report.md  16-phase-9-report.md  17-phase-10-report.md  18-release-readiness-audit.md  19-phase-11-event-api-plan.md  20-phase-11-plan-review.md  21-phase-11-report.md  23-icmp-and-traceroute-plan.md  24-icmp-plan-review.md  25-phase-12-report.md  26-phase-13-report.md  27-phase-14-report.md  28-phase-15-report.md  29-phase-12-15-implementation-audit.md  31-network-and-scanner-evolution-plan.md  41-phase-24-report.md  42-phase-25-report.md  43-udp-probe-parity-plan.md  44-udp-probe-parity-plan-review.md  45-phase-27-report.md  46-phase-28-report.md  47-phase-29-report.md  48-phase-30-report.md  49-phase-31-report.md  50-phase-32-report.md  (+17 more)
crates/nodenetraw-native/fuzz/: Cargo.toml
crates/nodenetraw-native/fuzz/fuzz_targets/: surface.rs
crates/nodenetscanner-engine/fuzz/: Cargo.toml
crates/nodenetscanner-engine/fuzz/fuzz_targets/: plan.rs
native/: Cargo.toml
scripts/: assemble-release.mjs  check-udp-provenance.mjs  test-release-consumer.mjs  (+1 more)
src/: index.ts
(+89 files in other folders)
