[package]
name = "nodenetraw-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
license = "MIT"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "=0.4.13"
nodenetraw-native = { path = "..", features = ["fuzzing"] }

[[bin]]
name = "surface"
path = "fuzz_targets/surface.rs"
test = false
doc = false
bench = false

[workspace]
