[package]
name = "nodenetscanner-engine-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
license = "MIT"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "=0.4.13"
nodenet-protocols = { path = "../../nodenet-protocols" }
nodenetscanner-engine = { path = ".." }

[[bin]]
name = "plan"
path = "fuzz_targets/plan.rs"
test = false
doc = false
bench = false

[workspace]
